# ATOS

./: .clang-format  .dockerignore  .env  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  CMakeLists.txt  Dockerfile  Doxyfile  Jenkinsfile  OvertakeScenario.xosc  README.md  SECURITY.md  allMaestroIntegrationTests.sh  bsObject0  bsObject1  bsObject100.sh  bsObject2  bsObject3  bsObject4  buildMaestro.sh  checkCodeFormat.sh  copyTraj100.sh  dependencies.txt  docker-compose-bridge.yml  docker-compose-demo.yml  docker-compose-test.yml  docker-compose.yml  formatSourceFiles.sh  install.sh  install_atos.sh  maestroExtensiveTests.sh  maestroStandardTests.sh  mkdocs.yml  package.xml  postinstall.sh  postrm.sh  prerm.sh  (+3 more)
GUC/: Console.qml  (+21 more)
atos/iso22133/: .gitignore  CMakeLists.txt  Jenkinsfile  README.md  Toolchain_arm.cmake  iso22133.c  iso22133.h  iso22133.i  positioning.c  positioning.h  positioning.i  setup.py
atos_gui/: package.xml  setup.cfg  setup.py
atos_gui/atos_gui/: main.py
atos_gui/launch/: gui.py
common/: CMakeLists.txt  CRSTransformation.cpp  CRSTransformation.hpp  datadictionary.c  datadictionary.h  journal.cpp  journal.hpp  loggable.hpp  module.cpp  module.hpp  objectconfig.cpp  objectconfig.hpp  regexpatterns.hpp  roschannel.cpp  roschannel.hpp  server.cpp  server.hpp  serverfactory.cpp  serverfactory.hpp  tcpserver.cpp  tcpserver.hpp  trajectory.cpp  trajectory.hpp  type.cpp  type.h  udpserver.cpp  udpserver.hpp  util.c  util.h
common/osihandler/: CMakeLists.txt  README.md  osi_handler.cpp  osi_handler.hpp
common/roschannels/: cartesiantrajectorychannel.hpp  commandchannels.hpp  controlsignalchannel.hpp  geojsonchannel.hpp  gnsspathchannel.hpp  monitorchannel.hpp  navsatfixchannel.hpp  pathchannel.hpp  pointcloudchannel.hpp  remotecontrolchannels.hpp  roschannel.hpp  statechange.hpp  test_channels.hpp  triggeractionchannels.hpp  v2xchannel.hpp
common/shmem/: CMakeLists.txt  shmem.cpp  shmem.h
common/sockets/: CMakeLists.txt  canhandler.cpp  canhandler.hpp  client.cpp  client.hpp  server.cpp  server.hpp  socket.cpp  socket.hpp  socketexceptions.hpp  tcphandler.cpp  tcphandler.hpp  test_can.cpp  test_socket.cpp  udphandler.cpp  udphandler.hpp
common/testUtils/: testUtils.hpp
common/tests/: rclcpp_utils.hpp  test_relativetrajectory.cpp  test_reversetrajectory.cpp
common/time/: CMakeLists.txt  atosTime.c  atosTime.h
common/util/: coordinateutils.cpp  coordinateutils.hpp  fileutils.cpp  fileutils.hpp
core/: CMakeLists.txt
core/extensive-tests/: 000-StartupAndKillMainExecutable.sh
core/inc/: citscontrol.h  datadictionary.h  iso22133.h  journal.h  journalcontrol.h  logger.h  objectcontrol.h  remotecontrol.h  timecontrol.h  util.h
core/integration-tests/: 000-StartupAndKillMainExecutable.sh  005-UserControlConnect.py  100-SingleTypicalTest.py  1004-geofenceLongTerm.py  1005-geofenceLongTerm.py  101-stateTests.py  249-uploadRowMismatchingTrajectories.py  404-geofenceLongTerm.py  404TransgressionLog.txt  905-geofenceTransgression.py  DONTRUNYET_905-geofenceTransgression.py  ManualMessageTest.py  ManualMessageTestISO.py  geofenceLongTerm.py
core/linux/: maestro-core.service.in
core/src/: citscontrol.c  datadictionary.c  datadictionary.cpp  iso22133.c  journal.cpp  journalcontrol.cpp  logger.c  logger.cpp  main.c  objectcontrol.c  positioning.c  simulatorcontrol.c  supervisorcontrol.c  systemcontrol.c  timecontrol.c  util.c
core/traj/: safety.traj
gui/simplecontrol/: CMakeLists.txt  package-lock.json  package.json  server.js
modules/ATOSBase/: CMakeLists.txt  README.md
modules/BackToStart/: BackToStart  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
modules/DirectControl/: CMakeLists.txt  README.md
modules/DroneControl/: CMakeLists.txt
modules/EsminiAdapter/: CMakeLists.txt  PROJOptions.cmake  README.md
modules/IntegrationTesting/: CMakeLists.txt
modules/JournalControl/: CMakeLists.txt  README.md
modules/MQTTBridge/: CMakeLists.txt  README.md
modules/MaestroBase/: CMakeLists.txt
modules/OSIAdapter/: CMakeLists.txt  README.md
modules/ObjectControl/: CMakeLists.txt  README.md
modules/ObjectMonitoring/: CMakeLists.txt  README.md  connectionhandler.cpp
modules/OsiControl/: CMakeLists.txt
modules/RelativeKinematics/: CMakeLists.txt  README.md
modules/SampleModule/: CMakeLists.txt  README.md
modules/ScenarioControl/: CMakeLists.txt  README.md
modules/Supervision/: CMakeLists.txt  README.md
object/: CMakeLists.txt
object/src/: 53240  53242  drivefile.txt  object.c  object_byte.c
server/: CMakeLists.txt  CMakeLists.txt.user.88e8be5.4.8-pre1  buildServer.sh  paho_c_version  startserver  ubuntuCleanServer
server/conf/: Version.txt  adaptivesync.conf  objprop.conf  supervision.conf  test.conf
server/geofence/: GaragePlanForbidden.geofence
server/inc/: citscontrol.h  datadictionary.h  iso22133.h  logger.h  logging.h  objectcontrol.h  positioning.h  remotecontrol.h  simulatorcontrol.h  supervision.h  supervisorcontrol.h  systemcontrol.h  timecontrol.h  usercontrol.h  util.h  visualization.h
server/integration-tests/: 000-StartupAndKillMainExecutable.sh  005-UserControlConnect.py  100-SingleTypicalTest.py  249-uploadRowMismatchingTrajectories.py  StartupAndKillMainExecutable.sh
server/rel/: TEServer
server/src/: citscontrol.c  clean  datadictionary.c  iso22133.c  logger.c  logger.c.orig  logging.c  main.c  objectcontrol.c  objectcontrol.c.orig  positioning.c  remotecontrol.c  simulatorcontrol.c  startserver  supervision.c  supervisorcontrol.c  systemcontrol.c  systemcontrol.c.orig  timecontrol.c  trajchecker.c  usercontrol.c  util.c  visualization.c
server/traj/: 0.traj  1.traj  192.168.0.17  GarageLastbilRektangel2.traj  GarageRektangelInre3.traj  GarageRektangelYttre3.traj  GarageplanInnerring.traj  GarageplanYtterring.traj  README.txt  RuralRoadTruck1.traj  aliv_rect.traj  fengco_drivefile_ego.traj  garageh.chronos  garagev.chronos  rectangle1.traj  rural2.traj  ruralmid2.traj  ruralright2.traj  safety.traj  straightLineAccelDecel_30kmh.traj
(+771 files in other folders)
