<?xml version="1.0"?>
<package format="2">
  <name>maestro</name>
  <version>0.5.0</version>
  <description>The maestro package</description>

  <maintainer email="lukas.wikander@astazero.com">lukas</maintainer>


  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/maestro</url> -->


  <author email="lukas.wikander@astazero.com">Lukas Wikander</author>
  <author email="sebastian.lindholm@astazero.com">Sebastian Loh Lindholm</author>
  <author email="viktor.johansson@astazero.com">Viktor Johansson</author>
  <author email="adam.eriksson@astazero.com">Adam Eriksson</author>
  <author email="alfred.aronsson@astazero.com">Alfred Aronsson</author>
  <author email="jesper.blidkvist@astazero.com">Jesper Blidkvist</author>
  <author email="oscar.johansson@astazero.com">Oscar Johansson</author>
  <author email="frida.reichenberg@astazero.com">Frida Reichenberg</author>
  <author email="victor.jarlow@astazero.com">Victor Jarlow</author>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <doc_depend>doxygen</doc_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
