<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>atos_gui</name>
  <version>1.0.0</version>
  <description>This is an GUI for ATOS running in a ROS2 node</description>
  <maintainer email="robert.brenick@astazero.com">Robert Brenick</maintainer>
  <license>MPL 2.0</license>
  
  <depend>rclpy</depend>
  <depend>rcl_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>